# brick-case-PS

./: .gitignore  HOW TO RUN.md  main.py  pyproject.toml
collector/: logger.py  settings.py
collector/fipe/: car_data_extractor.py  car_data_extractor_req.py  constants.py  get_fipe_codes.py  get_fipe_month_refs.py
